Changed and added pictures, fixed h2 to reflect information provided, adjusted spacing around elements and added to media query to improve responsiveness

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -67,6 +67,7 @@ p {
   color: var(--branding-color);
   border: 1px solid var(--branding-color);
   font-weight: 500;
+  background-color: var(--secondary-color);
 }
 .project-description {
   padding: 120px 60px;
@@ -75,5 +76,17 @@ p {
   .project-description {
     padding: 0;
     text-align: center;
+  }
+  .hero h1 {
+    font-size: 56px;
+  }
+  .hero h2 {
+    font-size: 28px;
+  }
+  .hero p {
+    font-size: 24px;
+  }
+  h2 {
+    font-size: 40px;
   }
 }
